Added stateless Angular and NestJS support (#1)
* Angular NestJS Support

* Adding angular support, beta release

* Leave off AI logs

* Platform agnostic capabilities for generation

* test fixes

* fixes

---------

Co-authored-by: Weeks, Daniel <DanielWeeks@rocketmortgage.com>

--- a/packages/react-widget/package.json
+++ b/packages/react-widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@feedback-forge/react-widget",
-  "version": "0.2.2",
+  "version": "0.3.0-beta.0",
   "description": "A customizable React component for collecting user feedback.",
   "author": "Feedback Forge",
   "repository": {
