--- a/packages/integration-github/package.json
+++ b/packages/integration-github/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@feedback-forge/integration-github",
-  "version": "0.2.2",
+  "version": "0.3.0-beta.0",
   "description": "GitHub integration for Feedback Forge. Creates GitHub issues from processed feedback.",
   "author": "Feedback Forge",
   "repository": {
@@ -20,8 +20,7 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js",
-    "./client": "./dist/components/GithubIssueManagement.js"
+    ".": "./dist/index.js"
   },
   "scripts": {
     "build": "rimraf dist && tsc",
@@ -38,15 +37,8 @@
     "octokit": "^5.0.5"
   },
   "devDependencies": {
-    "@payloadcms/ui": "^3.60.0",
-    "@types/react": "^19.1.8",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "react": "^19.1.0",
     "typescript": "5.7.3"
-  },
-  "peerDependencies": {
-    "@payloadcms/ui": "^3.60.0",
-    "react": "^19.1.0"
   }
 }
