--- a/packages/angular-widget/package.json
+++ b/packages/angular-widget/package.json
@@ -17,16 +17,8 @@
     "component"
   ],
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "ng-packagr -p ng-package.json",
     "clean": "rimraf dist"
   },
   "peerDependencies": {
@@ -36,12 +28,17 @@
     "rxjs": "^7.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
+    "@angular/common": "^18.2.14",
+    "@angular/compiler-cli": "^18.2.14",
+    "@angular/core": "^18.2.14",
+    "@angular/forms": "^18.2.14",
+    "@angular/platform-browser": "^18.2.14",
     "@types/node": "^22.0.0",
+    "ng-packagr": "^18.2.1",
     "rimraf": "^6.1.0",
     "rxjs": "^7.8.1",
-    "typescript": "~5.7.3"
+    "tslib": "^2.8.1",
+    "typescript": "~5.5.4",
+    "zone.js": "~0.14.10"
   }
 }
