--- a/packages/angular-widget/tsconfig.json
+++ b/packages/angular-widget/tsconfig.json
@@ -8,7 +8,6 @@
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "composite": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -23,6 +22,6 @@
     "strictInjectionParameters": true,
     "enableI18nLegacyMessageIdFormat": false
   },
-  "include": ["src/**/*"],
+  "files": ["src/public-api.ts"],
   "exclude": ["node_modules", "dist"]
 }
